@@ -17,8 +17,7 @@
 */
 
 import QtQuick 1.0
-//import org.kde.plasma.core 0.1 as PlasmaCore
-//import org.kde.qtextracomponents 0.1 as QtExtraComponents
+import org.kde.plasma.core 0.1 as PlasmaCore
 
 Column
 {
